SealedClassGenerator adopts JDK17+
Sealed classes becomes a feature since JDK17, V_PREVIEW is not required.

Signed-off-by: Jason Feng <fengj@ca.ibm.com>